--- a/src/apollo/core/templates/core/layout.html
+++ b/src/apollo/core/templates/core/layout.html
@@ -13,6 +13,7 @@
     <link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/table-fixed-header.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/datepicker.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css">
     {% block stylesheets %}{% endblock %}
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.8.1.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
@@ -22,7 +23,11 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/protovis.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/custom.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/highcharts.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/raphael-min.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.csv.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/kartograph.js"></script>
     {% block javascripts %}{% endblock %}
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
