--- a/src/apollo/core/templates/core/map_embed.html
+++ b/src/apollo/core/templates/core/map_embed.html
@@ -3,68 +3,114 @@
 <head>
 	<link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
-	<script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.8.1.js"></script>
-	<script type="text/javascript" src="{{ STATIC_URL }}js/raphael-min.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+	<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css">
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/kartograph.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.csv.js"></script>
+
 	
 	<style type="text/css">
 	</style>
 	<script type="text/javascript">
 		var map = {};
-		var data = [{province: 'Masvingo'}];
-		var data_symbols = [{name: 'Masvingo', value: 12}, {name: 'Midlands', value: 13}];
 
 		function loadMap() {
+			$.fn.qtip.defaults.style.classes = 'qtip-light';
+        	$.fn.qtip.defaults.style.def = false;
+        	var legends = {
+        		A: 'Observer NOT Permitted to Observe (at any time)',
+        		B: 'Serious Problems during the Setting Up of Polling Stations',
+        		C: 'Serious Problems during Voting',
+        		D: 'Serious Problems during Counting OF PRESIDENTIAL BALLOTS',
+        		E: 'Incidents Away from Polling Stations',
+        		F: 'Serious Problem during Collation of Results',
+        		X: 'Incidents of Violence or Intimidation (at any time)',
+        		Y: 'Other Incidents',
+        		Z: "Observer's Security Threated (I am in DANGER!!!!)"
+        	};
+        	var options = ['A', 'B', 'C', 'D', 'E', 'F', 'X', 'Y', 'Z'];
+        	var colors = ["#1f77b4", "#aec7e8", "#ff7f0e", "#ffbb78", "#2ca02c", "#98df8a", "#d62728", "#ED86F1", "#9467bd", "#c5b0d5"];
+
 			map = $K.map('#map', 600, 600);
 			map.loadMap('/assets/zimbabwe.svg', function () {
-				addLayer('provinces');
-				map.addSymbols({
-					type: $K.PieChart,
-					data: data_symbols,
-					colors: ['#F99869', '#EF2923'],
-					border: '#fff',
-					location: function(d) {return 'provinces.'+d.name},
-					values: function(d) {return [d.value, 100 - d.value]},
-					radius: function(d) { return 30; }
+
+				map.addLayer('provinces', {
+					styles: {
+						fill: '#C6DBEF',
+						'stroke-width': 1,
+						'stroke':'#fff'
+					},
+					key: 'province',
+					title: function (d) { return d.province; },
 				});
-				map.addSymbols({
-				    type: $K.Bubble,
-				    data: data_symbols,
-				    location: function(d) { return 'provinces.' +d.name},
-				    radius: function(d) { return 11; },
-				    style: 'fill:white; stroke-width: 0;',
-				    title: function(d) { return d.name; }
-				});
-				map.addSymbols({
-				    type: $K.Label,
-				    data: data_symbols,
-				    location: function(d) { return 'provinces.' +d.name},
-				    text: function(d) { return d.value; }, style: 'font-size:12'
+
+				sector_title = function (d, option) {
+					return '<span>' + legends[option] + '</span><span style="font-size:2em;margin-top:10em">' + '<strong>' + (parseFloat(d[option])/parseFloat(d.TOT) * 100).toFixed(1) + '%</strong> (' + d[option] + ')</span>';
+				}
+
+				$.get('incidents-province.csv', function(data) {
+                	data = $.parseCSV(data);
+
+					map.addSymbols({
+						type: $K.PieChart,
+						data: data.rows.slice(0, -1),
+						colors: function (d) { return _.map(_.filter(options, function (option) { return d[option] > 0; }), function (option) { return colors[options.indexOf(option)]; }) },
+						titles: function (d) { return _.map(_.filter(options, function (option) { return d[option] > 0; }), function (option) { return sector_title(d, option); })},
+						border: '#fff',
+						borderWidth: 1,
+						location: function(d) { return 'provinces.' + d.LOC },
+						values: function(d) { return _.map(_.filter(options, function (option) { return d[option] > 0; }), function (option) { return d[option]; })},
+						radius: function(d) { return 22; }
+						
+					});
+					map.addSymbols({
+					    type: $K.Bubble,
+					    data: data.rows.slice(0, -1),
+					    location: function(d) { return 'provinces.' + d.LOC},
+					    radius: function(d) { return 12; },
+					    style: 'fill:white; stroke-width: 0;',
+					});
+
+					map.addSymbols({
+					    type: $K.Label,
+					    data: data.rows.slice(0, -1),
+					    location: function(d) { return 'provinces.' + d.LOC},
+					    text: function(d) { return d.TOT; }, style: 'font:9px "Courier New" important'
+					});
+
+					$('a[title!=""]').qtip({
+						position: {
+					        my: 'top left',  // Position my top left...
+					        at: 'bottom right', // at the bottom right of...
+					        target: 'mouse',
+					        adjust: {
+					        	x: 5, y: 15
+					        }
+					    },
+					    content: {
+				        	title: { 
+				        		text: function (api) { return /^<span>([^\<]+)<\/span>/.test($(this).attr('title')) ? /^<span>([^\<]+)<\/span>/.exec($(this).attr('title'))[1] : ""; }
+				        	},
+				        	text: function (api) { return /^<span>[^\<]+<\/span>.+/.test($(this).attr('title')) ? /^<span>[^\<]+<\/span>(.+)/.exec($(this).attr('title'))[1] : $(this).attr('title');
+				        	}
+				        }
+					});
+
+					///
 				});
 			});
 			 
 		}
-
-		function addLayer(name) {
-			map.clear();
-			map.addLayer(name, {
-				styles: {
-					fill: '#DDDDDD',
-					'stroke-width': 1,
-					'stroke':'#fff'
-				},
-				key: 'province',
-				title: function (d) { return d.province; }
-			});
-		}
-
 	</script>
+
 </head>
 <body onLoad="loadMap()">
 	<div class="row">
 		<div class="span6 offset3">
-			<legend style="text-align:center;">Zimbabwe Incidents Map</legend>
-			<div id="map" style="margin-top:3em;"></div>
+			<div id="map" style="margin-top:3.5em;"></div>
 		</div>
 	</div>
 </body>
