--- a/src/apollo/core/templates/core/analysis_location_navigation.html
+++ b/src/apollo/core/templates/core/analysis_location_navigation.html
@@ -1,7 +1,7 @@
 {% if locations %}
 <ul class="nav nav-pills">
     {% for location in locations %}
-    	{% if analysis_tag == 'process' %}
+    	{% if analysis_type == 'process' %}
 	    <li><a href="{% if tag %}{% url submissions_analysis_location_tag form.pk location.pk tag %}{% else %}{% url submissions_analysis_location form.pk location.pk %}{% endif %}">{{ location.name }}</a></li>
 	    {% else %}
 	    <li><a href="{% url results_analysis_location form.pk location.pk %}">{{ location.name }}</a></li>
