--- a/src/apollo/core/templates/core/critical_incidents_locations.html
+++ b/src/apollo/core/templates/core/critical_incidents_locations.html
@@ -48,9 +48,10 @@
 			    <div class="tab-pane active" id="table">
 <table class="table table-bordered table-striped">
     <tr>
-        <td colspan="5"><strong>{{ form_field.tag }}</strong> · {{ form_field.description }}</td>
+        <td colspan="6"><strong>{{ form_field.tag }}</strong> · {{ form_field.description }}</td>
     </tr>
 	<tr>
+        <th>PSZ</th>
         <th>Name</th>
 		<th>Location</th>
         <th style="text-align: center">Witnessed</th>
@@ -59,7 +60,8 @@
 	</tr>
     {% for incident in incidents %}
 	<tr>
-        <td>{{ incident.observer.name }}</td>
+        <td>{{ incident.observer.observer_id|default_if_none:"" }}</td>
+        <td>{{ incident.observer.name|default_if_none:"" }}</td>
         <td>{{ incident.location }} · <em class="muted">{{ incident.location.type }}</em></td>
         <td style="text-align: center">
         {% with incident.data.witness as witness %}
@@ -93,42 +95,6 @@
 				<!--Map-->
 				<div class="tab-pane" id="map">
 					<div id="map_canvas" style="width:100%; height:550px; margin-bottom:40px;"></div>
-					<script type="text/javascript">
-						var map; 
-
-						function initialize() {
-							var center = new google.maps.LatLng (-19, 29);
-							var myOptions = {
-								zoom: 6,
-								center: center,
-								mapTypeId: google.maps.MapTypeId.ROADMAP,
-								panControl: true,
-								zoomControl: true,
-								zoomControlOptions: {
-    								style: google.maps.ZoomControlStyle.SMALL
-  								},
-								mapTypeControl: true,
-								mapTypeControlOptions: {
-									style: google.maps.MapTypeControlStyle.DROPDOWN_MENU
-								},
-								streetViewControl: false,
-								overviewMapControl: true
-							}
-							map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
-
-							provinces = new google.maps.KmlLayer('https://dl.dropbox.com/u/7849018/provinces.kml', {preserveViewport: true});
-							provinces.setMap(map);
-
-							var markers = [];
-
-							{% for marker in incidents_markers %}
-							markers.push(new google.maps.Marker({
-								position: new google.maps.LatLng({{ marker.0 }}, {{ marker.1 }})
-							}));{% endfor %}
-
-							cluster = new MarkerClusterer(map, markers);
-						}
-					</script>
 				</div>
 			</div>
 		</div>
